# tantrix

./: CMakeLists.txt  Makefile  README.md
src/: tantrix.cpp
